--- a/roles/etcd/templates/etcd.conf.j2
+++ b/roles/etcd/templates/etcd.conf.j2
@@ -1,8 +1,10 @@
-name: "{{ inventory_hostname_short }}"
+name: "{{ hostname_prefix }}-{{ inventory_hostname.split('.')[2:] | join('-') }}"
 data-dir: "/opt/etcd"
-initial-advertise-peer-urls: "http://{{ ansible_host }}:2380"
+initial-advertise-peer-urls: "http://{{ inventory_hostname }}:2380"
 listen-peer-urls: "http://0.0.0.0:2380"
 listen-client-urls: "http://0.0.0.0:2379"
-advertise-client-urls: "http://{{ ansible_host }}:2379"
-initial-cluster: "{% for item in groups['etcd-node'] %}{{ item }}=http://{{ hostvars[item]['ansible_host'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}"
+advertise-client-urls: "http://{{ inventory_hostname }}:2379"
+initial-cluster: "{% for item in groups['etcd'] %}{{ hostname_prefix }}-{{ hostvars[item]['inventory_hostname'].split('.')[2:] | join('-') }}=http://{{ hostvars[item]['inventory_hostname'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}"
 initial-cluster-token: "etcd-cluster"
+etcd-quota-backend-bytes: "{{ 8*1024*1024*1024 }}"
+etcd_snapshot_count: "5000"
