--- a/roles/px-lighthouse/templates/start.sh.j2
+++ b/roles/px-lighthouse/templates/start.sh.j2
@@ -9,7 +9,7 @@ set -x
     -e INFLUXDB_INIT_PWD="passw0rd" \
     -v pxlighthouse_influxdb_data:/var/lib/influxdb \
     --volume-driver ${VOLUME_DRIVER} \
-    ${PX_REGISTRY}influxdb:${INFLUXDB_VERSION}
+    ${PX_REGISTRY}/influxdb:${INFLUXDB_VERSION}
  
 if [ $? -ne 0 ]; then
    exit 1
@@ -20,7 +20,7 @@ fi
     --net=pxlighthouse_backend \
     -e PROXY_URL="http://lighthouse:80/" \
     -p ${LIGHTHOUSE_HTTPS_PORT}:443 \
-    ${PX_REGISTRY}dce-plugin-proxy:latest
+    ${PX_REGISTRY}/dce-plugin-proxy:latest
  
 /usr/bin/sleep 2
  
@@ -30,6 +30,6 @@ fi
     --net-alias=lighthouse \
     -e PWX_PX_PRECREATE_ADMIN=${PWX_PX_PRECREATE_ADMIN} \
     -p ${LIGHTHOUSE_HTTP_PORT}:80 \
-    ${PX_REGISTRY}px-lighthouse:${LIGHTHOUSE_VERSION} \
+    ${PX_REGISTRY}/px-lighthouse:${LIGHTHOUSE_VERSION} \
     -d http://admin:passw0rd@influxdb:8086 \
     -k ${PX_ETCD}
