--- a/roles/px-lighthouse/templates/config.j2
+++ b/roles/px-lighthouse/templates/config.j2
@@ -1,4 +1,4 @@
-PX_REGISTRY={{ offline_hub_prefix }}
+PX_REGISTRY={{ hub_offline_prefix }}
 LIGHTHOUSE_VERSION=latest
 LIGHTHOUSE_HTTP_PORT=9080
 LIGHTHOUSE_HTTPS_PORT=9433
